--- a/teams/USERNAME/values.yaml
+++ b/teams/USERNAME/values.yaml
@@ -1,4 +1,4 @@
-email: yossiivan@gmail.com  # Replace with email found in User Info page in Argo CD.
+email: <yossiivan@gmail.com>  # Replace with email found in User Info page in Argo CD.
 cluster: workshop
 namespaces:
 - dev
